CLA-214 - Modal content is mostly aligned... I will have to make sure all modal share all these styles as i have to write this same CSS 3x over it seems...

--- a/cla-frontend-console/src/ionic/app/app.scss
+++ b/cla-frontend-console/src/ionic/app/app.scss
@@ -16,6 +16,15 @@
 
 @import "../theme/styles.scss";
 
+.item-md{
+  padding-left: 0;
+}
+
+.item-md.item-block .item-inner{
+  padding-right: 0;
+}
+
 .card-md .item-md.item-block .item-inner {
   border-bottom: 1px solid #dedede;
+  padding-right: 0 !important;
 }
